<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Comp">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rev"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:text="@string/ch"/>

    <EditText
        android:id="@+id/ed_ch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_ch"
        android:text="@string/en"/>

    <EditText
        android:id="@+id/ed_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_ch"
        android:layout_toRightOf="@+id/textView4"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""/>

    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_en"
        android:layout_marginTop="25dp"
        android:text="@string/aav" />

    <EditText
        android:id="@+id/ed_memo"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_below="@+id/b2"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ed_memo"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"/>

        <Button
            android:id="@+id/b_can"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/can"/>
    </LinearLayout>
</RelativeLayout>